--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,59 @@
-.App {
-  text-align: center;
+body {
+  /* background-color: #CBEAA6; */
+  background-color: #d5f5af;
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header {
+  /* border: 2px solid #000; */
+  height: 3.5rem;
+  margin: 0.5rem;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.logo {
+  /* border: 2px solid #fff; */
+  width: 21.5rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.pagination {
+  font-size: 1.8rem;
+  font-family: "Gill Sans", sans-serif;;
+  padding-top: 1.5rem;
+  /* border: 1px solid #000; */
+  width: 70rem;
+
 }
+
+.pagination-link {
+  padding: 1.5rem;
+}
+.pagination-link-nr {
+  color: #93D0F2;
+  padding: 0.2rem 0.5em;
+  border: 2px solid #93D0F2;
+  border-radius: 0.7rem;
+}
+.pagination-link-nr:hover{
+  background-color: #93D0F2;
+  color: #fff;
+}
+
+.map-container {
+  height: 28rem;
+  width: 42rem;
+  margin: 7rem 3.5rem;
+  background-color: #659AB8;
+  opacity: 0.6;
+
+  /* border: 1px solid #000; */
+}
+.text {
+  font-size: 4.5rem;
+  font-weight: 200;
+  font-stretch: expanded;
+  padding: 11rem 3rem;
+  opacity: 0.6;
+  /* transform: rotate(29deg); */
+}
+
